# kubesynapse.ai

./: .bandit.yaml  .build-tag.tmp  .current-tag  .deploy-version  .dockerignore  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  BUG_HUNT_REVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  DEPLOYMENT-CHECKLIST.yaml  DEPLOYMENT-README.md  EXECUTION-PLAN.md  GOVERNANCE.md  INSTALL.md  LICENSE  LOGO_PROMPTS.md  MAINTAINERS.md  Makefile  Optimization Research.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY.md  ROADMAP.md  SALES-TECHNICAL-KubeSynth.md  SALES-TECHNICAL-Kubemininions.md  SECURITY.md  UI_REDESIGN_PROMPT.md  WORK-SUMMARY-3DAYS-HARDENING-AND-UI-CLEANUP.md  WORK-SUMMARY-3DAYS.md  _validate_spec.py  add_noqa.py  ai300_generation-1.journal.ndjson  ai300_test_write.txt  architecture-overview.md  (+24 more)
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
agent-runtime/: .dockerignore  Dockerfile  agent_logic.py  env_utils.py  guardrails.py  hitl.py  opensandbox_tools.py  requirements.txt
api-gateway/: .dockerignore  API_GATEWAY_DEPLOYMENT_MANIFEST.yaml  API_GATEWAY_HARDENING_AUDIT.md  API_GATEWAY_PRODUCTION_CHECKLIST.md  Dockerfile  README.md  _auth_header.txt  _core.py  agent_cache.py  alembic.ini  auth_middleware.py  auth_store.py  constants.py  dependencies.py  enterprise_auth.py  error_codes.py  fix_logger.py  fix_main.py  gateway_validation.py  jwt_utils.py  main.py  main_old.py  migration_runner.py  optimization_store.py  requirements.txt  structured_logging.py  test_regex.py  trace_store.py  traces_router.py  utils.py  webhook_security.py
benchmarks/: README.md  bench-api.py  bench-concurrency.py  bench-reconcile.py
catalog/: agent-templates.json  skills-catalog.json
cli/: README.md  _legacy_agentctl.py  agentctl.py  pyproject.toml
cli-e2e-tests/: 01-setup.ps1  02-deploy.ps1  04-cleanup.ps1  README.md  common.ps1  run-all.ps1
cli/src/agentctl/: __init__.py  __main__.py  app.py  client.py  config.py  output.py
cli/src/agentctl/commands/: __init__.py  _parsers.py  admin.py  agents.py  artifacts.py  auth.py  chat.py  credentials.py  observatory.py  optimizations.py  profile.py  providers.py  runs.py  skills.py  webhooks.py  workflows.py
cli/tests/: conftest.py  test_client.py  test_config.py  test_observatory.py  test_optimizations.py  test_output.py  test_parsers.py  test_workflows.py
clie2etests/: 03-exercise.ps1
codex-runtime/: Dockerfile  main.py  requirements.txt
collector-agent/: Dockerfile  collector.py  requirements.txt
credential-proxy/: Dockerfile  README.md  go.mod  main.go  main_test.go
demo/: README.md  recording-runbook.md  skeptic-proof-points.md  video-showcase-script.md  youtube-linkedin-kit.md
deploy/: MINIKUBE-RUNBOOK.md  README.md  kind-cluster-config.example.yaml  litellm-config.yaml  values.ai-sandbox.kind-local.yaml  values.cluster.example.yaml  values.dev.yaml  values.dockerhub.local.yaml  values.google-oidc.example.yaml  values.kind.quickstart.yaml  values.kind.yaml  values.local-images.example.yaml  values.minikube.local.yaml  values.production.yaml  values.staging.yaml
docs/: AGENT_TEAM_GUIDE.md  DEEP_ANALYSIS.md  ROADMAP.md  accessibility-report.md  aiops-observability-architecture.md  api-reference.md  architecture-diagram-redesign-spec.md  architecture-overview.md  architecture.md  backup-and-recovery.md  cli-architecture.md  community.md  configuration-reference.md  contributor-program.md  deployment-checklist.yaml  deployment-readme.md  execution-plan.md  faq.md  getting-started.md  kubesynapse-architecture.md  kubesynapse-architecture.mmd  kubesynapse-platform-security-audit.md  kubesynapse-sourcebook.md  kubesynth-architectureold.drawio  memory-architecture.md  observability-explained.md  observability-remediation-plan.md  opencode-security-audit.md  opencode-validation-report.md  operator-guide.md  pi-integration-plan.md  pi-mono-knowledge-base.md  pi-security-audit.md  production-deployment-guide.md  rbac-matrix.md  road-to-prod-audit.md  run-variability-guide.md  runtime-api-spec.md  runtime-api-spec.yaml  secrets-management.md  (+6 more)
examples/: cluster-ops-agents.yaml  context7-demo-agents.yaml  context7-demo-workflow.yaml  creator-workflow.yaml  docresearcher-agent.yaml  jupiter8-web-synth-bundle.yaml  jupiter8-web-synth-deploy.ps1  mistral-vibe-agent.yaml  observability-demo-fire.yaml  observability-targets.yaml  opencode-invoke-examples.sh  opencode-output-schema.json  sample-agent.yaml  sample-eval.yaml  sample-goose-agent.yaml  sample-opencode-agent.yaml  sample-policy.yaml  sample-project-context.yaml  sample-subagents.yaml  sample-tenant.yaml  sample-workflow.yaml  securityresearcher-agent.yaml  smart-enterprise-bundle.yaml  speckit-agents.yaml  speckit-workflow.yaml
goose-runtime/: Dockerfile  main.py  requirements.txt
mcp-sidecars/: README.md
opencode-runtime/: .dockerignore  Dockerfile  Dockerfile.patched  README.md  _smoke_hardening.py  analysis.py  config.py  config_generator.py  content_safety.py  hitl.py  invoke.py  main.py  memory.py  models.py  openapi.json  openapi.yaml  opencode_client.py  pi_client.py  pi_types.py  prompts.py  providers.py  requirements.txt  runtime_events.py  runtime_permissions.py  sanitize_secrets.py  session.py  skills.py  supervisor.py  tracing.py  utils.py  worker.py  workspace.py
operator/: .dockerignore  DEPLOYMENT_MANIFEST.yaml  Dockerfile  PRODUCTION_CHECKLIST.md  PRODUCTION_HARDENING_AUDIT.md  README.md  _extract_builders.py  _extract_services.py  alembic.ini  circuit_breaker.py  config.py  constants.py  errors.py  main.py  mock_entrypoint.py  reconcile.py  requirements.txt  runtime_events.py  state_store.py  trace_client.py  tracing.py  utils.py  validation.py  worker.py
pi-runtime/: Dockerfile  README.md  entrypoint.sh  logger.js  openapi.json  package.json  pi_bridge.js  pi_bridge.py  runtime_events.js  session_state.js  settings.json
presentation/: index.html
reports/: alert-DemoHighLatency-20260604-172226.md  (+7 more)
scripts/: build-catalog-index.py  demo.sh  (+22 more)
(+778 files in other folders)
