[project]
name = "kubesynth"
version = "0.1.0"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = [
    "tests/",
    "web-ui/",
    "cli/",
    "docs/",
    "examples/",
    "deploy/",
    "scripts/",
]

[[tool.mypy.overrides]]
module = [
    "kopf.*",
    "croniter.*",
    "opensandbox.*",
    "opensandbox_code_interpreter.*",
    "prometheus_fastapi_instrumentator.*",
    "pythonjsonlogger.*",
    "langgraph.*",
    "langchain_core.*",
    "langchain_openai.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "S",     # flake8-bandit (security)
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
    "S101",  # assert is fine in tests
    "S104",  # binding to 0.0.0.0 is intentional in containers
    "S603",  # subprocess calls are intentional in sandbox tools
    "S607",  # partial executable path acceptable in container context
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]  # allow assert and hardcoded passwords in tests

[tool.ruff.lint.isort]
known-first-party = ["operator", "agent_logic", "guardrails", "hitl", "env_utils", "opensandbox_tools", "utils", "state_store", "auth_store", "enterprise_auth", "jwt_utils"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
markers = [
    "integration: marks tests that require a running OpenCode server (deselect with '-m \"not integration\"')",
]
