[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentctl"
version = "0.1.0"
description = "Rich Python CLI for the AI Agent Sandbox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
    "rich>=13.7,<14.0",
    "typer>=0.12,<1.0",
]

[project.scripts]
agentctl = "agentctl:main"

[tool.setuptools]
py-modules = ["agentctl"]
