[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubesynapse-cli"
version = "0.3.0"
description = "Modern CLI for KubeSynapse — Kubernetes-native AI agent operations"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
    "rich>=13.7,<14.0",
    "typer[all]>=0.12,<1.0",
    "platformdirs>=4.0,<5.0",
    "tenacity>=8.2,<10.0",
    "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
agentctl = "agentctl.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentctl"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
